# HikariObfuscator_Guide

./: FLAGS.md  README.md
Hikari/: CMakeLists.txt
Hikari/Hikari/: CMakeLists.txt  PluginEntry.cpp
Hikari/Hikari/Obfuscation/Core/: ConstantEncryption.cpp  IndirectBranch.cpp  StringEncryption.cpp
Hikari/Obfuscation/: CMakeLists.txt
Hikari/Obfuscation/Core/: FunctionCallObfuscate.cpp  Obfuscation.cpp  PluginEntry.cpp  README.md
Hikari/Obfuscation/Headers/: README.md
